# jumli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml
jumli_data/records/: known_bugs.ron  performance_advice.ron  shitlist.ron
jumli_gen/: Cargo.toml
jumli_gen/src/: consts.rs  main.rs  records.rs  render.rs
jumli_gen/src/records/: mod.rs  types.rs
jumli_gen/src/sources/: jumli_data.rs  mod.rs  use_this_instead.rs  workshop_database.rs
jumli_static/: CNAME  footer.css  footer.html  index.css  index.html  quick.html  rentry.html  report.css  robots.txt
mapmysite/: Cargo.toml
mapmysite/src/: lib.rs
